--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,3 +5,9 @@ data_ingestion:
   source_URL: "https://github.com/saz12345/Branching_tutorial/raw/refs/heads/main/credit_risk_dataset.csv%20(2).zip"
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
+
+
+data_validation:
+  root_dir: artifacts/data_validation
+  unzip_data_dir: artifacts/data_ingestion/credit_risk_dataset.csv
+  STATUS_FILE: artifacts/data_validation/status.txt
