--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,12 +2,16 @@ artifacts_root : artifacts
 
 data_ingestion:
   root_dir: artifacts/data_ingestion
-  source_URL: "https://github.com/saz12345/Branching_tutorial/raw/refs/heads/main/credit_risk_dataset.csv%20(2).zip"
+  source_URL: "https://github.com/saz12345/Branching_tutorial/raw/refs/heads/main/archive%20(4).zip"
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
 
 
 data_validation:
   root_dir: artifacts/data_validation
-  unzip_data_dir: artifacts/data_ingestion/credit_risk_dataset.csv
+  unzip_data_dir: artifacts/data_ingestion/WineQT.csv
   STATUS_FILE: artifacts/data_validation/status.txt
+
+data_transformation:
+  root_dir: artifacts/data_transformation
+  data_path: artifacts/data_ingestion/WineQT.csv
