--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,7 +3,7 @@ name: Deploy Flask App to AWS ECS
 on:
   push:
     branches:
-      - main  # Trigger deployment only on main branch
+      - main  # Trigger deployment on push to main branch
 
 jobs:
   deploy:
@@ -11,31 +11,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: 🧾 Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
+      - name: 🐳 Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Configure AWS credentials
+      - name: 🔐 Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Login to Amazon ECR
+      - name: 🔑 Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Build, tag, and push Docker image to ECR
-        env:
-          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-          IMAGE_TAG: ${{ github.sha }}
+      - name: 🛠️ Build, tag, and push Docker image to ECR
         run: |
+          echo "🔧 Exporting environment variables..."
+          export ECR_REPOSITORY="${{ secrets.ECR_REPOSITORY }}"
+          export AWS_REGION="${{ secrets.AWS_REGION }}"
+          export IMAGE_TAG="${{ github.sha }}"
+
           echo "📦 ECR_REPOSITORY: $ECR_REPOSITORY"
           echo "🌍 AWS_REGION: $AWS_REGION"
+          echo "🔢 IMAGE_TAG: $IMAGE_TAG"
 
           if [ -z "$ECR_REPOSITORY" ]; then
             echo "❌ ERROR: ECR_REPOSITORY is empty. Please set it in GitHub Secrets."
@@ -45,23 +47,24 @@ jobs:
           ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
           IMAGE_URI="$ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG"
 
-          echo "🐳 Building image: $IMAGE_URI"
+          echo "🐳 Building Docker image: $IMAGE_URI"
           docker build -t $IMAGE_URI .
 
-          echo "🚀 Pushing image to ECR"
+          echo "📤 Pushing Docker image to ECR"
           docker push $IMAGE_URI
 
+          echo "💾 IMAGE_URI=$IMAGE_URI"
           echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
 
-      - name: Fill in the new image ID in the ECS task definition
+      - name: 📝 Fill in the new image in the ECS task definition
         id: render-task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: ecs-task-definition.json  # Must be in repo or generated
+          task-definition: ecs-task-definition.json  # Ensure this file is committed
           container-name: ${{ secrets.CONTAINER_NAME }}
           image: ${{ env.IMAGE_URI }}
 
-      - name: Deploy ECS service
+      - name: 🚀 Deploy ECS service
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
           service: ${{ secrets.ECS_SERVICE_NAME }}
